syntax = "proto3";
package ibc.account;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

import "cosmos/auth/v1beta1/auth.proto";

option go_package = "github.com/cosmos/interchain-accounts/x/ibc-account/types";

// IBCAccount defines an account to which other chains have privileges
message IBCAccount {
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = false;
  option (cosmos_proto.implements_interface) = "IBCAccountI";

  cosmos.auth.v1beta1.BaseAccount base_account = 1 [
    (gogoproto.embed) = true,
    (gogoproto.moretags) = "yaml:\"base_account\""
  ];
  string source_port = 2;
  string source_channel = 3;
  string destination_port = 4;
  string destination_channel = 5;
}
